# 2d_to_3d_recon_test

./: Detailed_Expression_Capture_and_Animation.ipynb  README.md
2d_to_3d_recon/: pyproject.toml
2d_to_3d_recon/tests/: test_2d_to_3d_recon.py
